--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             font-size: 20px;
             border-radius: 20px;
             padding: 10px 15px;
+            background-color: white;
         }
 
         .buttons {
